@@ -2,14 +2,12 @@ package org.arend.lib.meta.simplify;
 
 import org.arend.ext.concrete.expr.ConcreteExpression;
 import org.arend.ext.concrete.expr.ConcreteReferenceExpression;
-import org.arend.ext.core.definition.CoreClassField;
-import org.arend.ext.core.definition.CoreFunctionDefinition;
 import org.arend.ext.core.expr.CoreClassCallExpression;
 import org.arend.ext.core.expr.CoreExpression;
+import org.arend.ext.reference.ArendRef;
 import org.arend.ext.typechecking.ExpressionTypechecker;
 import org.arend.ext.typechecking.TypedExpression;
 import org.arend.ext.util.Pair;
-import org.arend.lib.StdExtension;
 import org.arend.lib.meta.equation.binop_matcher.FunctionMatcher;
 
 import java.util.List;
@@ -17,18 +15,18 @@ import java.util.List;
 public class IdentityInverseRule extends LocalSimplificationRuleBase {
   private final FunctionMatcher invMatcher;
   private final FunctionMatcher ideMatcher;
-  private final CoreFunctionDefinition invIde;
+  private final ArendRef invIde;
 
-  public IdentityInverseRule(TypedExpression instance, CoreClassCallExpression classCall, StdExtension ext, ConcreteReferenceExpression refExpr, ExpressionTypechecker typechecker, boolean isAdditive) {
-    super(instance, classCall, ext, refExpr, typechecker);
+  public IdentityInverseRule(TypedExpression instance, CoreClassCallExpression classCall, SimplifyMeta meta, ConcreteReferenceExpression refExpr, ExpressionTypechecker typechecker, boolean isAdditive) {
+    super(instance, classCall, meta, refExpr, typechecker);
     if (isAdditive) {
-      this.invMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, ext.equationMeta.negative, typechecker, factory, refExpr, ext, 1);
-      this.ideMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, ext.equationMeta.zro, typechecker, factory, refExpr, ext, 0);
-      this.invIde = ext.equationMeta.negativeZro;
+      this.invMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, meta.negative, typechecker, factory, refExpr, 1);
+      this.ideMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, meta.zro, typechecker, factory, refExpr, 0);
+      this.invIde = meta.negativeZro;
     } else {
-      this.invMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, ext.equationMeta.inverse, typechecker, factory, refExpr, ext, 1);
-      this.ideMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, ext.equationMeta.ide, typechecker, factory, refExpr, ext, 0);
-      this.invIde = ext.equationMeta.invIde;
+      this.invMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, meta.inverse, typechecker, factory, refExpr, 1);
+      this.ideMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, meta.ide, typechecker, factory, refExpr, 0);
+      this.invIde = meta.invIde;
     }
   }
 
@@ -36,9 +34,9 @@ public class IdentityInverseRule extends LocalSimplificationRuleBase {
   protected Pair<CoreExpression, ConcreteExpression> simplifySubexpression(CoreExpression subexpr) {
     List<CoreExpression> args = invMatcher.match(subexpr);
     if (args != null) {
-      var arg = args.get(0);
+      var arg = args.getFirst();
       if (ideMatcher.match(arg) != null) {
-        return new Pair<>(arg, factory.ref(invIde.getRef()));
+        return new Pair<>(arg, factory.ref(invIde));
       }
     }
     return null;
