@@ -11,11 +11,13 @@ import org.arend.naming.reference.*;
 import org.arend.term.concrete.BaseConcreteExpressionVisitor;
 import org.arend.term.concrete.Concrete;
 import org.arend.ext.error.LocalError;
+import org.arend.typechecking.provider.ConcreteProvider;
 
 import java.util.*;
 
 public class ClassFieldChecker extends BaseConcreteExpressionVisitor<Void> {
   private Referable myThisParameter;
+  private final ConcreteProvider myConcreteProvider;
   private final Set<TCDefReferable> myRecursiveDefs;
   private final TCDefReferable myClassReferable;
   private final Collection<CoreClassDefinition> mySuperClasses;
@@ -24,8 +26,9 @@ public class ClassFieldChecker extends BaseConcreteExpressionVisitor<Void> {
   private final ErrorReporter myErrorReporter;
   private int myClassCallNumber;
 
-  ClassFieldChecker(Referable thisParameter, Set<TCDefReferable> recursiveDefs, TCDefReferable classReferable, Collection<CoreClassDefinition> superClasses, Set<? extends LocatedReferable> fields, Set<TCDefReferable> futureFields, ErrorReporter errorReporter) {
+  ClassFieldChecker(Referable thisParameter, ConcreteProvider concreteProvider, Set<TCDefReferable> recursiveDefs, TCDefReferable classReferable, Collection<CoreClassDefinition> superClasses, Set<? extends LocatedReferable> fields, Set<TCDefReferable> futureFields, ErrorReporter errorReporter) {
     myThisParameter = thisParameter;
+    myConcreteProvider = concreteProvider;
     myRecursiveDefs = recursiveDefs;
     myClassReferable = classReferable;
     mySuperClasses = superClasses;
@@ -47,22 +50,21 @@ public class ClassFieldChecker extends BaseConcreteExpressionVisitor<Void> {
   @Override
   public Concrete.Expression visitReference(Concrete.ReferenceExpression expr, Void params) {
     Referable ref = expr.getReferent();
-    if (ref instanceof TCDefReferable) {
-      if (myFields.contains(ref)) {
-        if (myFutureFields != null && myFutureFields.contains(ref)) {
+    if (ref instanceof TCDefReferable defRef) {
+      if (myFields.contains(defRef)) {
+        if (myFutureFields != null && myFutureFields.contains(defRef)) {
           return makeErrorExpression(expr);
         } else {
           return Concrete.AppExpression.make(expr.getData(), expr, new Concrete.ThisExpression(expr.getData(), myThisParameter), false);
         }
       } else {
         ClassDefinition enclosingClass = null;
-        if (myRecursiveDefs.contains(ref)) {
-          Definition def = myClassReferable.getTypechecked();
-          if (def instanceof ClassDefinition) {
-            enclosingClass = (ClassDefinition) def;
+        if (myRecursiveDefs.contains(defRef)) {
+          if (myConcreteProvider.getConcrete(defRef) instanceof Concrete.Definition def && def.enclosingClass != null && def.enclosingClass.getTypechecked() instanceof ClassDefinition classDef) {
+            enclosingClass = classDef;
           }
         } else {
-          Definition def = ((TCDefReferable) ref).getTypechecked();
+          Definition def = defRef.getTypechecked();
           if (def != null && !(def instanceof ClassField)) {
             enclosingClass = def.getEnclosingClass();
           }
@@ -71,7 +73,7 @@ public class ClassFieldChecker extends BaseConcreteExpressionVisitor<Void> {
           if (myFutureFields != null && myClassReferable.equals(enclosingClass.getReferable())) {
             return makeErrorExpression(expr);
           }
-          if (ClassDefinition.isSubClassOf(new ArrayDeque<>(mySuperClasses), enclosingClass)) {
+          if (ClassDefinition.findAncestor(new ArrayDeque<>(mySuperClasses), enclosingClass::equals) != null) {
             return Concrete.AppExpression.make(expr.getData(), expr, new Concrete.ThisExpression(expr.getData(), myThisParameter), false);
           }
         }
@@ -113,7 +115,7 @@ public class ClassFieldChecker extends BaseConcreteExpressionVisitor<Void> {
           return expr;
         }
       }
-    } else if (expr.getFunction() instanceof Concrete.ReferenceExpression && !expr.getArguments().get(0).isExplicit() && !(expr.getArguments().get(0) instanceof Concrete.GeneratedArgument)) {
+    } else if (expr.getFunction() instanceof Concrete.ReferenceExpression && !expr.getArguments().getFirst().isExplicit() && !(expr.getArguments().getFirst() instanceof Concrete.GeneratedArgument)) {
       for (Concrete.Argument argument : expr.getArguments()) {
         argument.expression = argument.expression.accept(this, params);
       }
@@ -142,5 +144,15 @@ public class ClassFieldChecker extends BaseConcreteExpressionVisitor<Void> {
     if (!(classFieldImpl instanceof Concrete.CoClauseFunctionReference)) {
       super.visitClassFieldImpl(classFieldImpl, params);
     }
+  }
+
+  @Override
+  public Concrete.Expression visitNumericLiteral(Concrete.NumericLiteral expr, Void params) {
+    return expr;
+  }
+
+  @Override
+  public Concrete.Expression visitStringLiteral(Concrete.StringLiteral expr, Void params) {
+    return expr;
   }
 }
